repositioned index file

--- a/Assignment 1(ALTSOE0242474)/form.html
+++ b/Assignment 1(ALTSOE0242474)/form.html
@@ -12,7 +12,7 @@
 <body>
 	<nav class="navbar">
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="../index.html">Home</a></li>
 			<li><a href="form.html">SignUp</a></li>
 			<li><a href="../Assignment 2(ALTSOE0242474)/table.html">Table</a></li>
 			<li><a href="../Assignment 2(ALTSOE0242474)/media.html">Media</a></li>
