--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anita David - Personal Webpage</title>
-  <link rel="stylesheet" href="index.css">	
+  <link rel="stylesheet" href="./Assignment 1(ALTSOE0242474)/index.css">	
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 	<nav class="navbar">
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="form.html">SignUp</a></li>
+			<li><a href="./Assignment 1(ALTSOE0242474)/form.html">SignUp</a></li>
             <li><a href="../Assignment 2(ALTSOE0242474)/table.html">Table</a></li>
 			<li><a href="../Assignment 2(ALTSOE0242474)/media.html">Media</a></li>
 		</ul>
@@ -23,7 +23,7 @@
   <main>
 	<section id="about" class="bio">
         <div class="profile-card">
-            <img src="./assets/images/IMG_6589.JPG" alt="Anita David's Profile Picture" class="profile-img">
+            <img src="./Assignment 1(ALTSOE0242474)/assets/images/IMG_6589.JPG" alt="Anita David's Profile Picture" class="profile-img">
             <div class="profile-info">
                 <h2>About Me</h2>
                 <p>I am a Front-end Developer, UI/UX Designer and a Lecturer, with a background in Forest Resources Management. My journey has been shaped by a drive to continuosly expand and evolve my skill set, especially in the world of technology. Over the years, i have developed problem solving skills and honed my creativity. I am excited to infuse these skills into my software development journey.</p>
