--- a/Assignment 2(ALTSOE0242474)/media.html
+++ b/Assignment 2(ALTSOE0242474)/media.html
@@ -12,7 +12,7 @@
   </head>
   <body><nav class="navbar">
     <ul>
-      <li><a href="../Assignment 1(ALTSOE0242474)/index.html">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="../Assignment 1(ALTSOE0242474)/form.html">SignUp</a></li>
       <li><a href="table.html">Table</a></li>
       <li><a href="media.html">Media</a></li>
