nav link updated

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="./Assignment 1(ALTSOE0242474)/form.html">SignUp</a></li>
-            <li><a href="./Assignment 2(ALTSOE0242474)/table.html 2(ALTSOE0242474)/table.html">Table</a></li>
-			<li><a href="./Assignment 2(ALTSOE0242474)/media.html 2(ALTSOE0242474)/media.html">Media</a></li>
+            <li><a href="../HTML Assignments/Assignment 2(ALTSOE0242474)/table.html">Table</a></li>
+			<li><a href="../HTML Assignments/Assignment 2(ALTSOE0242474)/media.html">Media</a></li>
 		</ul>
 	</nav>
 	<header id="home">
